Fix button overflow by removing width:100%, set textarea height to 130px to match inputs
Agent-Logs-Url: https://github.com/denver-aia/scaling-octo-happiness/sessions/7b4fe024-6d89-4feb-835d-39f8dde4dbfb

--- a/wp-content/themes/engic/css/elements747d.css
+++ b/wp-content/themes/engic/css/elements747d.css
@@ -1705,7 +1705,7 @@ select,
 }
 
 .wpcf7-form .wpcf7-textarea {
-	height: 150px;
+	height: 130px;
 	resize: none;
 }
 
@@ -1713,7 +1713,6 @@ select,
 	background-color: #bba887;
 	color: #ffffff;
 	border: none;
-	width: 100%;
 }
 
 .eut-one-third {
